css/style.css
* {
    margin: 0;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;
    max-width: 1920px;
  }

  .main-page {
    background-color: #f7eff9fb;
    }

h1 { 
    color: #555;
    font-family: serif;
    text-align: center;
    background-color: rgb(233, 210, 210, 0.3);
    }    

h2 {
    color: rgb(221, 163, 225);
    padding-top: 5px;
    text-align: center;
    }

h3 {
    color: rgb(221, 163, 225);
    padding-top: 5px;
    }

h4 { 
    padding-top: 5px;
    padding-bottom: 3px;
    color: #555;
    font-weight: 600;
    }

h5 {
    font-weight: 400;
    color: #414142;
    padding-bottom: 5px;
    }

p {
    color: #414142;
    font-size: 14px;
    line-height: 20px;
    letter-spacing: 0.8px;
    
    }

ul {
    padding-left: 35px;
    }

.profile-info {
    padding: 20px; 
    margin-bottom: 20px;
    position: relative;
    max-width: 92vw;
    border-radius: 0.6em;
    transform: translate(-50%);
    left: 50%;
    box-shadow: 0 1.8em 3em rgba(1, 17, 39, 0.15);
    }

.profile-list { 
    text-align: center;
    margin-top: -120px;
    }

.about-me {
    margin-top: 10px;
    text-align: center;
    }

img {
    border: 5px solid #555;
    width: 170px;
    height: 170px;
    margin-top: -40px ;
    margin-left: 20px;
    }

.row {
    background-color: rgb(255, 255, 255, 0.6);
    padding: 20px;
    position: relative;
    width: 85vw;
    border-radius: 0.6em;
    transform: translate(-50%);
    left: 50%;
    box-shadow: 0 1.8em 3em rgba(1, 17, 39, 0.15);
    margin-bottom: 20px;
    }

.wrapper {
    padding-top: 20px;
    padding-bottom: 20px;
    background-color: rgb(255, 255, 255, 0.6);
    position: absolute;
    width: 90vw;
    border-radius: 0.6em;
    transform: translate(-50%);
    left: 50%;
    box-shadow: 0 1.8em 3em rgba(1, 17, 39, 0.15);
    }

.testimonial-container {
    width: 90%;
    margin: auto;
    }

.wrapper button {
    font-size: 1.8em;
    height: 2.2em;
    width: 2.2em;
    background-color: rgb(255, 255, 255, 0.6);
    position: absolute;
    margin: auto;
    top: 0;
    bottom: 0;
    border: none;
    color: #809380;
    box-shadow: 0 0 1em rgba(1, 17, 39, 0.25);
    cursor: pointer;
    border-radius: 50%;
    }

button#next {
    right: -1.1em;
    }

button#prev {
    left: -1.1em;
    }

.testimonial-container p {
    color: #414142;
    text-align: center;
    font-size: 16px;
    line-height: 20px;
    letter-spacing: 0.8px;
    }

.testimonial-container h3 {
    color: #2d3d67;
    font-size: 0.8em;
    text-align: right;
    text-decoration: none;
    }
  
.testimonial-container h6 {
    color: #bcc4da;
    font-size: 0.7em;
    font-weight: 400;
    text-align: right;
    }
         
a {
    text-decoration: none;
    color: black
    }

a:hover {
    color: rgb(231, 200, 233)
    }

     
button {
        --c:  rgb(231, 200, 233); /* the color*/
        
        box-shadow: 0 0 0 .1em inset var(--c); 
        --_g: linear-gradient(var(--c) 0 0) no-repeat;
        background: 
          var(--_g) calc(var(--_p,0%) - 100%) 0%,
          var(--_g) calc(200% - var(--_p,0%)) 0%,
          var(--_g) calc(var(--_p,0%) - 100%) 100%,
          var(--_g) calc(200% - var(--_p,0%)) 100%;
        background-size: 50.5% calc(var(--_p,0%)/2 + .5%);
        outline-offset: .1em;
        transition: background-size .4s, background-position 0s .4s;

        font-family: system-ui, sans-serif;
        font-size: 18px;
        cursor: pointer;
        padding: 10px;
        font-weight: bold;  
        border: none;

    }

button:hover {
        --_p: 100%;
        transition: background-position .4s, background-size 0s;
    }
      

@media  (max-width: 980px) {
    img {
        margin: 20px auto;
        width: 250px;
        height: 250px;
        display: block;
        }
    
    .profile-list {
        text-align: right;
        text-align: center;
        margin-top: 0px;
        }
    }

  

